--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.css" integrity="sha512-kJlvECunwXftkPwyvHbclArO8wszgBGisiLeuDFwNM8ws+wKIw0sv1os3ClWZOcrEB2eRXULYUsm8OVRGJKwGA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
     
 </head>
 <body>
@@ -315,10 +316,21 @@
                             <div class="w-2">
                                 <div class="text12">
                                     <div class="monthly">Weather</div>
-                                    <div class="line2">32
-                                        <sup>°F</sup>
+                                    <div class="space">
+                                        <div class="line2">32
+                                            <sup>°F</sup>
+                                            <div class="sky"><i class="fa-solid fa-cloud-rain"></i></div>
+                                        </div>
+                                        <div class="month">Monday</div>
+                                    </div>
+                                    <div class="space1">
+                                        <div class="line3">Partly Clouds</div>
+                                        <div class="month1">Nov, 01 2017</div>
                                     </div>
                                 </div>
+                            </div>
+                            <div class="w-2">
+                                
                             </div>
                            </div>
                 </div>
@@ -335,4 +347,6 @@
         $(".line").toggle("slow");
     })
 </script>
+
+<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> -->
 </html>
